[metadata]
name = release_helper
version = attr: release_helper.__version__
description = Release helper for Python and/or npm packages.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = http://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    build
    check-manifest
    click
    github-activity~=0.1
    requests
    tbump
    twine

[options.extras_require]
test = coverage; pytest; pytest-cov

[options.entry_points]
console_scripts =
    release-helper = release_helper.__main__:cli
